meta-imx: add necessary dependent layer for fsl-sdk-release
When parsing yocto project with command "bitbake -p", there is below
error reported:
layers/meta-imx/meta-sdk/recipes-graphics/libgpuperfcnt/
libgpuperfcnt_6.4.11.p1.2.bb:23: Could not inherit file
classes/fsl-eula-unpack2.bbclass
Because the necessary dependent layers of fsl-sdk-release are not
downloaded when setting up project, add them to avoid building
issue.

Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/meta-imx-sdk/conf/layer.conf
+++ b/meta-imx-sdk/conf/layer.conf
@@ -8,6 +8,9 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "fsl-sdk-release"
 BBFILE_PATTERN_fsl-sdk-release := "^${LAYERDIR}/"
 BBFILE_PRIORITY_fsl-sdk-release = "8"
+
+LAYERDEPENDS_fsl-sdk-release = "core fsl-bsp-release"
+
 LAYERSERIES_COMPAT_fsl-sdk-release = "mickledore nanbield scarthgap"
 
 BBFILES_DYNAMIC += " \
