--- a/meta-imx-ml/conf/layer.conf
+++ b/meta-imx-ml/conf/layer.conf
@@ -8,4 +8,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "imx-machine-learning"
 BBFILE_PATTERN_imx-machine-learning := "^${LAYERDIR}/"
 BBFILE_PRIORITY_imx-machine-learning = "8"
+
+LAYERDEPENDS_meta-ml = "core freescale-layer"
+
 LAYERSERIES_COMPAT_imx-machine-learning = "mickledore nanbield scarthgap"
