imx8mp-navq.conf: Fix typo
Add the missing equal sign.

Signed-off-by: Jun Zhu <junzhu@nxp.com>
(cherry picked from commit c188496f0e7bdbc3e74123bda1df6159b1479f14)
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-imx-bsp/conf/machine/imx8mp-navq.conf
+++ b/meta-imx-bsp/conf/machine/imx8mp-navq.conf
@@ -6,7 +6,7 @@
 
 require conf/machine/include/imx8mp-evk.inc
 
-MACHINE_FEATURES:remove "nxp8997-pcie nxp8997-sdio nxp9098-pcie nxp9098-sdio"
+MACHINE_FEATURES:remove = "nxp8997-pcie nxp8997-sdio nxp9098-pcie nxp9098-sdio"
 MACHINE_FEATURES += "nxp8987-sdio"
 
 KERNEL_DEVICETREE_BASENAME = "${MACHINE}"
