Revert "imx95evk.conf: Work around for image_wic break [YOCIMX-8164]"
This reverts commit 6867c8ea03aa0bc506ea0880d026151ae859fd16.

(cherry picked from commit 66175791f80210c7929b431d2e66437b372997ea)
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-imx-bsp/conf/machine/imx95evk.conf
+++ b/meta-imx-bsp/conf/machine/imx95evk.conf
@@ -28,6 +28,9 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/imx95-15x15-evk-ap1302.dtbo \
     freescale/imx95-15x15-evk-ap1302_rpi.dtb \
     freescale/imx95-15x15-evk-ap1302_rpi.dtbo \
+    freescale/imx95-15x15-evk-boe-wxga-lvds-two-panels.dtb \
+    freescale/imx95-15x15-evk-boe-wxga-lvds0-panel.dtb \
+    freescale/imx95-15x15-evk-boe-wxga-lvds1-panel.dtb \
     freescale/imx95-15x15-evk-i2c-spi-slave.dtb \
     freescale/imx95-15x15-evk-inmate.dtb \
     freescale/imx95-15x15-evk-lt9611uxc.dtb \
@@ -35,7 +38,13 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/imx95-15x15-evk-lt9611uxc-ap1302.dtb \
     freescale/imx95-15x15-evk-mqs.dtb \
     freescale/imx95-15x15-evk-os08a20-isp-adv7535.dtb \
+    freescale/imx95-15x15-evk-os08a20.dtb \
+    freescale/imx95-15x15-evk-os08a20.dtbo \
+    freescale/imx95-15x15-evk-ox03c10.dtb \
+    freescale/imx95-15x15-evk-ox03c10.dtbo \
     freescale/imx95-15x15-evk-ox03c10-isp-adv7535.dtb \
+    freescale/imx95-15x15-evk-ox05b1s.dtb \
+    freescale/imx95-15x15-evk-ox05b1s.dtbo \
     freescale/imx95-15x15-evk-ox05b1s-isp-adv7535.dtb \
     freescale/imx95-15x15-evk-rm692c9.dtb \
     freescale/imx95-15x15-evk-rm692c9.dtbo \
