imx95evk.conf: Exclude imx95-19x19-lpddr5-verdin [YOCIMX-8168]
As so many long name dtb/dtbo are added to boot partition of this consolidated machine,
it causes the vfat file number limitation:
When you create a long filename with VFAT, it uses one directory entry for the MS-DOS alias
and another entry for every 13 characters of the long filename.
In theory, a single long filename could occupy up to 21 directory entries.
The root directory has a limit of 512 files, but if you were to use the maximum length long filenames
in the root directory, you could cut this limit to a mere 24 files.

so it causes the dp_image_wic break as:
 Copying imx95-19x19-verdin-ox05b1s-isp-lt8912.dtb
 Copying imx95-19x19-verdin-panel-cap-touch-10inch-dsi.dtb
 No directory slots
 No directory slots
 Copying imx95-19x19-verdin-rm692c9.dtb
 No directory slots

Signed-off-by: Jun Zhu <junzhu@nxp.com>
(cherry picked from commit edfbd4b4b60fc7bfa6b70e69788fef16d4476809)
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-imx-bsp/conf/machine/imx95evk.conf
+++ b/meta-imx-bsp/conf/machine/imx95evk.conf
@@ -7,10 +7,10 @@
 
 #        ** Important Note **
 # This machine generates an image contain the bootloader of 19x19 LPDDR5 EVK, Kernel, and rootfs, plus the DTBs of
-# 15x15 LPDDR4x EVK, 19x19 LPDDR5 Verdin  boards. The resulting image can be used for 19x19 LPDDR5 EVK directly,
+# 15x15 LPDDR4x EVK boards. The resulting image can be used for 19x19 LPDDR5 EVK directly,
 # and it can be manually converted for other EVK or QSB following the instructions in the User Guide - Consolidated Machines section.
 # For users of all of EVK variants, this can save build time and space. For most users, the dedicated machines
-# imx95-19x19-lpddr5-evk.conf, imx95-15x15-lpddr4x-evk.conf and imx95-19x19-lpddr5-verdin.conf should be used for simplicity.
+# imx95-19x19-lpddr5-evk.conf and imx95-15x15-lpddr4x-evk.conf should be used for simplicity.
 
 MACHINEOVERRIDES =. "imx95-19x19-lpddr5-evk:"
 require conf/machine/imx95-19x19-lpddr5-evk.conf
@@ -51,40 +51,10 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/imx95-15x15-evk-root.dtb \
     freescale/imx95-15x15-evk-rpmsg.dtb \
     freescale/imx95-15x15-evk-rpmsg-lpv.dtb \
-    freescale/imx95-19x19-verdin.dtb \
-    freescale/imx95-19x19-verdin-adv7535.dtb \
-    freescale/imx95-19x19-verdin-adv7535.dtbo \
-    freescale/imx95-19x19-verdin-adv7535-ap1302.dtb \
-    freescale/imx95-19x19-verdin-ap1302.dtb \
-    freescale/imx95-19x19-verdin-ap1302.dtbo \
-    freescale/imx95-19x19-verdin-lt8912.dtb \
-    freescale/imx95-19x19-verdin-lt8912.dtbo \
-    freescale/imx95-19x19-verdin-lt8912-ap1302.dtb \
-    freescale/imx95-19x19-verdin-lt9611uxc.dtb \
-    freescale/imx95-19x19-verdin-lt9611uxc.dtbo \
-    freescale/imx95-19x19-verdin-lt9611uxc-ap1302.dtb \
-    freescale/imx95-19x19-verdin-os08a20.dtb \
-    freescale/imx95-19x19-verdin-os08a20.dtbo \
-    freescale/imx95-19x19-verdin-os08a20-isp-lt8912.dtb \
-    freescale/imx95-19x19-verdin-ox03c10.dtb \
-    freescale/imx95-19x19-verdin-ox03c10.dtbo \
-    freescale/imx95-19x19-verdin-ox03c10-isp-lt8912.dtb \
-    freescale/imx95-19x19-verdin-ox05b1s.dtb \
-    freescale/imx95-19x19-verdin-ox05b1s.dtbo \
-    freescale/imx95-19x19-verdin-ox05b1s-isp-lt8912.dtb \
-    freescale/imx95-19x19-verdin-panel-cap-touch-10inch-dsi.dtb \
-    freescale/imx95-19x19-verdin-panel-cap-touch-10inch-dsi.dtbo \
-    freescale/imx95-19x19-verdin-panel-cap-touch-10inch-lvds.dtb \
-    freescale/imx95-19x19-verdin-rm692c9.dtb \
-    freescale/imx95-19x19-verdin-rm692c9.dtbo \
-    freescale/imx95-19x19-verdin-rpmsg.dtb \
 "
 IMAGE_BOOT_FILES:append = " \
     imx95-15x15-evk_m7_TCM_power_mode_switch.bin \
     imx95-15x15-evk_m7_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
     imx95-15x15-evk_m7_TCM_rpmsg_lite_str_echo_rtos.bin \
     imx95-15x15-evk_m7_TCM_sai_low_power_audio.bin \
-    imx95-verdin-evk_m7_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
-    imx95-verdin-evk_m7_TCM_rpmsg_lite_str_echo_rtos.bin \
-    imx95-verdin-evk_m7_TCM_sai_low_power_audio.bin \
 "
