imx95-19x19-lpddr5-evk.conf: Add missing dtb and dtbo files [YOCIMX-8177]
- imx95-19x19-evk-ti-serdes-combo.dtb
- imx95-19x19-evk-ti-serdes-combo.dtbo

Signed-off-by: Flora Hu <flora.hu@nxp.com>

--- a/meta-imx-bsp/conf/machine/imx95-19x19-lpddr5-evk.conf
+++ b/meta-imx-bsp/conf/machine/imx95-19x19-lpddr5-evk.conf
@@ -65,6 +65,8 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/${KERNEL_DEVICETREE_BASENAME}-rpmsg-lpv.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-ti-serdes.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-ti-serdes.dtbo \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-ti-serdes-combo.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-ti-serdes-combo.dtbo \
     freescale/${KERNEL_DEVICETREE_BASENAME}-tja1103-tja1120.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-tja1103-rmii.dtb \
 "
