--- a/meta-imx-bsp/conf/machine/imx95-19x19-verdin.conf
+++ b/meta-imx-bsp/conf/machine/imx95-19x19-verdin.conf
@@ -37,6 +37,8 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/${KERNEL_DEVICETREE_BASENAME}-rm692c9.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-rm692c9.dtbo \
     freescale/${KERNEL_DEVICETREE_BASENAME}-rpmsg.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-ti-serdes.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-ti-serdes.dtbo \
 "
 
 UBOOT_CONFIG_BASENAME = "imx95_19x19_verdin"
