layer.conf: Deploy i.MX 8ULP ELE firmware to rootfs [YOCIMX-8179]
Install path is /lib/firmware/imx/ele.

Signed-off-by: Jun Zhu <junzhu@nxp.com>

--- a/meta-imx-bsp/conf/layer.conf
+++ b/meta-imx-bsp/conf/layer.conf
@@ -102,7 +102,7 @@ MACHINE_FIRMWARE:remove:mx8mp-nxp-bsp  = "firmware-sof-imx"
 MACHINE_FIRMWARE:append:mx8mp-nxp-bsp  = " sof-zephyr zephyr-demo-imx"
 MACHINE_FIRMWARE:remove:mx8mpul-nxp-bsp  = "firmware-sof-imx"
 MACHINE_FIRMWARE:append:mx8mpul-nxp-bsp  = " sof-zephyr"
-MACHINE_FIRMWARE:append:mx8ulp-nxp-bsp = " sof-zephyr firmware-ele-imx-ext"
+MACHINE_FIRMWARE:append:mx8ulp-nxp-bsp = " sof-zephyr firmware-ele-imx firmware-ele-imx-ext"
 
 # NXP WiFi firmware & extra Wlan SDK
 MACHINE_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('MACHINE_FEATURES', 'nxpiw416-sdio', 'nxp-wlan-sdk', '', d)}"
