conf/layer.conf: Add imx8mp-evk-sof-pdm.dtb into LF build
Signed-off-by: Flora Hu <flora.hu@nxp.com>

--- a/meta-imx-bsp/conf/layer.conf
+++ b/meta-imx-bsp/conf/layer.conf
@@ -401,6 +401,9 @@ IMAGE_BOOT_FILES:append:imx93-11x11-lpddr4x-evk = " \
     imx93-11x11-evk_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
     imx93-11x11-evk_m33_TCM_sai_low_power_audio.bin \
 "
+KERNEL_DEVICETREE:append:imx8mp-lpddr4-evk = " \
+    freescale/imx8mp-evk-sof-pdm.dtb \
+"
 KERNEL_DEVICETREE:remove:imx93-11x11-lpddr4x-evk = " \
     freescale/imx93-11x11-evk-lpspi-slave.dtb \
     freescale/imx93-11x11-evk-lpspi.dtb \
