fsl-imx-xwayland: Add RDP support to distro [YOCIMX-8211]
Signed-off-by: Tom Hochstein <tom.hochstein@nxp.com>

--- a/meta-imx-sdk/conf/distro/fsl-imx-xwayland.conf
+++ b/meta-imx-sdk/conf/distro/fsl-imx-xwayland.conf
@@ -8,3 +8,6 @@ DISTRO = "fsl-imx-xwayland"
 # Remove conflicting backends
 DISTRO_FEATURES:remove = "directfb "
 DISTRO_FEATURES:append = " x11 wayland pam"
+
+PACKAGECONFIG:append:pn-weston      = " rdp"
+PACKAGECONFIG:append:pn-weston-init = " rdp"
