--- a/meta-imx-bsp/conf/machine/imx8mpevk.conf
+++ b/meta-imx-bsp/conf/machine/imx8mpevk.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: i.MX 8MP Consolidated Machine
-#@DESCRIPTION: A consolidated machine for using i.MX 8MP EVK both LPDDR4 and DDR4, see Important Note below
+#@DESCRIPTION: A consolidated machine configuration for i.MX 8MP EVK both LPDDR4 and DDR4, see Important Note below
 #@MAINTAINER: Jun Zhu <junzhu@nxp.com>
 
 #        ** Important Note **
