--- a/meta-imx-bsp/conf/machine/imx95-19x19-verdin.conf
+++ b/meta-imx-bsp/conf/machine/imx95-19x19-verdin.conf
@@ -60,6 +60,7 @@ DDR_FIRMWARE_NAME = " \
 M4_DEFAULT_IMAGE_MX95 = "imx95-verdin-evk_m7_TCM_rpmsg_lite_str_echo_rtos.bin"
 
 IMAGE_BOOT_FILES:append = " \
+    mcore-demos/imx95-verdin-evk_m7_TCM_power_mode_switch.bin \
     mcore-demos/imx95-verdin-evk_m7_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
     mcore-demos/imx95-verdin-evk_m7_TCM_rpmsg_lite_str_echo_rtos.bin \
     mcore-demos/imx95-verdin-evk_m7_TCM_sai_low_power_audio.bin \
