--- a/meta-imx-bsp/conf/machine/imx6ul7d.conf
+++ b/meta-imx-bsp/conf/machine/imx6ul7d.conf
@@ -11,8 +11,10 @@ MACHINEOVERRIDES =. "mx6:mx6ul:"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv7a/tune-cortexa7.inc
 
-# Install epdc firmware for i.MX7D
-MACHINE_FIRMWARE:append = " firmware-imx-epdc"
+MACHINE_FIRMWARE:append = " \
+    firmware-imx-epdc \
+    firmware-imx-sdma-imx7d \
+"
 
 KERNEL_DEVICETREE = " \
     nxp/imx/imx6ul-14x14-evk.dtb \
