--- a/meta-imx-bsp/conf/machine/imx95-15x15-lpddr4x-evk.conf
+++ b/meta-imx-bsp/conf/machine/imx95-15x15-lpddr4x-evk.conf
@@ -24,6 +24,7 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/${KERNEL_DEVICETREE_BASENAME}-boe-wxga-lvds-two-panels.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-boe-wxga-lvds0-panel.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-boe-wxga-lvds1-panel.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-flexspi-m2.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-i2c-spi-slave.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-inmate.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-lt9611uxc.dtb \
