--- a/meta-imx-bsp/conf/machine/imx95evk.conf
+++ b/meta-imx-bsp/conf/machine/imx95evk.conf
@@ -31,6 +31,7 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/imx95-15x15-evk-boe-wxga-lvds-two-panels.dtb \
     freescale/imx95-15x15-evk-boe-wxga-lvds0-panel.dtb \
     freescale/imx95-15x15-evk-boe-wxga-lvds1-panel.dtb \
+    freescale/imx95-15x15-evk-flexspi-m2.dtb \
     freescale/imx95-15x15-evk-i2c-spi-slave.dtb \
     freescale/imx95-15x15-evk-inmate.dtb \
     freescale/imx95-15x15-evk-lt9611uxc.dtb \
