imx93evk.conf: Add Tianma TM050RDH03 panel in imx93 9x9 qsb [YOCIMX-8428]
Signed-off-by: Flora Hu <flora.hu@nxp.com>

--- a/meta-imx-bsp/conf/machine/imx93evk.conf
+++ b/meta-imx-bsp/conf/machine/imx93evk.conf
@@ -53,6 +53,7 @@ KERNEL_DEVICETREE += " \
     freescale/imx93-9x9-qsb-ontat-wvga-panel.dtb \
     freescale/imx93-9x9-qsb-rpmsg.dtb \
     freescale/imx93-9x9-qsb-rpmsg-lpv.dtb \
+    freescale/imx93-9x9-qsb-tianma-wvga-panel.dtb \
 "
 # Include M33 demo apps of other boards
 IMAGE_BOOT_FILES:append = " \
