conf/layer.conf: Add Tianma TM050RDH03 panel in imx93 9x9 qsb [YOCIMX-8428]
Signed-off-by: Flora Hu <flora.hu@nxp.com>

--- a/meta-imx-bsp/conf/layer.conf
+++ b/meta-imx-bsp/conf/layer.conf
@@ -276,6 +276,9 @@ IMAGE_BOOT_FILES:append:imx8mp-lpddr4-evk = " \
     mcore-demos/imx8mp_m7_TCM_rpmsg_lite_str_echo_rtos.bin \
     mcore-demos/imx8mp_m7_TCM_sai_low_power_audio.bin \
 "
+KERNEL_DEVICETREE:append:imx8mp-lpddr4-evk = " \
+    freescale/imx8mp-evk-sof-pdm.dtb \
+"
 
 # Overrides for imx8mp-ddr4-evk
 MACHINE_FEATURES:append:imx8mp-ddr4-evk = " optee nxpwifi-all-pcie nxpwifi-all-sdio dpdk"
@@ -377,6 +380,9 @@ IMAGE_BOOT_FILES:append:imx93-9x9-lpddr4-qsb = " \
     mcore-demos/imx93-9x9-qsb_m33_TCM_sai_low_power_audio.bin \
 "
 IMXBOOT_TARGETS:imx93-9x9-lpddr4-qsb = "${@bb.utils.contains('UBOOT_CONFIG', 'ecc', '${IMXBOOT_TARGETS_ECC}', '${IMXBOOT_TARGETS_SD}', d)}"
+KERNEL_DEVICETREE:append:imx93-9x9-lpddr4-qsb = " \
+    freescale/imx93-9x9-qsb-tianma-wvga-panel.dtb \
+"
 
 # Overrides for imx93-11x11-lpddr4x-evk.conf AND imx93evk.conf
 MACHINE_FEATURES:append:imx93-11x11-lpddr4x-evk = " dpdk nxpwifi-all-sdio"
@@ -388,9 +394,6 @@ IMAGE_BOOT_FILES:append:imx93-11x11-lpddr4x-evk = " \
     mcore-demos/imx93-11x11-evk_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
     mcore-demos/imx93-11x11-evk_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
     mcore-demos/imx93-11x11-evk_m33_TCM_sai_low_power_audio.bin \
-"
-KERNEL_DEVICETREE:append:imx8mp-lpddr4-evk = " \
-    freescale/imx8mp-evk-sof-pdm.dtb \
 "
 KERNEL_DEVICETREE:remove:imx93-11x11-lpddr4x-evk = " \
     freescale/imx93-11x11-evk-lpspi-slave.dtb \
