--- a/meta-imx-bsp/conf/machine/imx95-19x19-lpddr5-evk.conf
+++ b/meta-imx-bsp/conf/machine/imx95-19x19-lpddr5-evk.conf
@@ -63,6 +63,7 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/${KERNEL_DEVICETREE_BASENAME}-root.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-rpmsg.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-rpmsg-lpv.dtb \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-sof-wm8962.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-ti-serdes.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-ti-serdes.dtbo \
     freescale/${KERNEL_DEVICETREE_BASENAME}-ti-serdes-combo.dtb \
