conf/machine/imx95evk.conf: Add sof boot container [YOCIMX-8361]
Signed-off-by: Alexandra Safta <alexandra-ioana.safta@nxp.com>

--- a/meta-imx-bsp/conf/machine/imx95evk.conf
+++ b/meta-imx-bsp/conf/machine/imx95evk.conf
@@ -1,62 +1,58 @@
-#@TYPE: Machine
-#@NAME: i.MX 95 Consolidated rootfs machine
-#@SOC: i.MX95
-#@DESCRIPTION: A Consolidated machine configuration for i.MX 95 19x19 LPDDR5 and
-#               15x15 LPDDR4x EVK, see Important Note below
-#@MAINTAINER: Jun Zhu <junzhu@nxp.com>
+require conf/machine/include/imx-base.inc
+require conf/machine/include/arm/armv8-2a/tune-cortexa55.inc
 
-#        ** Important Note **
-# This machine generates an image contain the bootloader of 19x19 LPDDR5 EVK, Kernel, and rootfs, plus the DTBs of
-# 15x15 LPDDR4x EVK boards. The resulting image can be used for 19x19 LPDDR5 EVK directly,
-# and it can be manually converted for other EVK or QSB following the instructions in the User Guide - Consolidated Machines section.
-# For users of all of EVK variants, this can save build time and space. For most users, the dedicated machines
-# imx95-19x19-lpddr5-evk.conf and imx95-15x15-lpddr4x-evk.conf should be used for simplicity.
+MACHINE_FEATURES += "pci wifi bluetooth optee"
+MACHINE_FEATURES:append:use-nxp-bsp = " nxpwifi-all-pcie nxpwifi-all-sdio jailhouse dpdk xen sof"
 
-MACHINEOVERRIDES =. "imx95-19x19-lpddr5-evk:"
-require conf/machine/imx95-19x19-lpddr5-evk.conf
-
-# Include device trees for other boards for internal test
-KERNEL_DEVICETREE:append:use-nxp-bsp = " \
-    freescale/imx95-15x15-ab2.dtb \
-    freescale/imx95-15x15-evk.dtb \
-    freescale/imx95-15x15-evk-aud-hat.dtb \
-    freescale/imx95-15x15-evk-adv7535.dtb \
-    freescale/imx95-15x15-evk-adv7535-ap1302.dtb \
-    freescale/imx95-15x15-evk-adv7535-ap1302_rpi.dtb \
-    freescale/imx95-15x15-evk-adv7535.dtbo \
-    freescale/imx95-15x15-evk-ap1302.dtb \
-    freescale/imx95-15x15-evk-ap1302.dtbo \
-    freescale/imx95-15x15-evk-ap1302_rpi.dtb \
-    freescale/imx95-15x15-evk-ap1302_rpi.dtbo \
-    freescale/imx95-15x15-evk-boe-wxga-lvds-two-panels.dtb \
-    freescale/imx95-15x15-evk-boe-wxga-lvds0-panel.dtb \
-    freescale/imx95-15x15-evk-boe-wxga-lvds1-panel.dtb \
-    freescale/imx95-15x15-evk-flexspi-m2.dtb \
-    freescale/imx95-15x15-evk-i2c-spi-slave.dtb \
-    freescale/imx95-15x15-evk-inmate.dtb \
-    freescale/imx95-15x15-evk-lt9611uxc.dtb \
-    freescale/imx95-15x15-evk-lt9611uxc.dtbo \
-    freescale/imx95-15x15-evk-lt9611uxc-ap1302.dtb \
-    freescale/imx95-15x15-evk-mqs.dtb \
-    freescale/imx95-15x15-evk-os08a20-isp-adv7535.dtb \
-    freescale/imx95-15x15-evk-os08a20.dtb \
-    freescale/imx95-15x15-evk-os08a20.dtbo \
-    freescale/imx95-15x15-evk-ox03c10.dtb \
-    freescale/imx95-15x15-evk-ox03c10.dtbo \
-    freescale/imx95-15x15-evk-ox03c10-isp-adv7535.dtb \
-    freescale/imx95-15x15-evk-ox05b1s.dtb \
-    freescale/imx95-15x15-evk-ox05b1s.dtbo \
-    freescale/imx95-15x15-evk-ox05b1s-isp-adv7535.dtb \
-    freescale/imx95-15x15-evk-rm692c9.dtb \
-    freescale/imx95-15x15-evk-rm692c9.dtbo \
-    freescale/imx95-15x15-evk-root.dtb \
-    freescale/imx95-15x15-evk-rpmsg.dtb \
-    freescale/imx95-15x15-evk-rpmsg-lpv.dtb \
+KERNEL_DEVICETREE = " \
+    freescale/${KERNEL_DEVICETREE_BASENAME}.dtb \
 "
-IMAGE_BOOT_FILES:append = " \
-    mcore-demos/imx95-15x15-evk_m7_TCM_low_power_wakeword.bin \
-    mcore-demos/imx95-15x15-evk_m7_TCM_power_mode_switch.bin \
-    mcore-demos/imx95-15x15-evk_m7_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
-    mcore-demos/imx95-15x15-evk_m7_TCM_rpmsg_lite_str_echo_rtos.bin \
-    mcore-demos/imx95-15x15-evk_m7_TCM_sai_low_power_audio.bin \
+
+IMX_DEFAULT_BOOTLOADER:use-nxp-bsp = "u-boot-imx"
+IMX_DEFAULT_BOOTLOADER:use-mainline-bsp = "u-boot-fslc"
+
+LOADADDR = ""
+UBOOT_SUFFIX = "bin"
+UBOOT_MAKE_TARGET = ""
+
+SPL_BINARY = "spl/u-boot-spl.bin"
+
+UBOOT_CONFIG ??= "sd"
+UBOOT_CONFIG[sd] = "${UBOOT_CONFIG_BASENAME}_evk_defconfig,sdcard"
+UBOOT_CONFIG[fspi] = "${UBOOT_CONFIG_BASENAME}_evk_fspi_defconfig"
+
+ATF_PLATFORM = "imx95"
+OEI_CONFIGS = "ddr tcm"
+OEI_CORE   = "m33"
+OEI_SOC    = "mx95"
+OEI_BOARD  ?= "mx95lp5"
+DDR_TYPE   ?= "lpddr5"
+
+IMXBOOT_VARIANTS = "alt jailhouse netc sof"
+
+# Multiple system manager configs by IMXBOOT_VARIANT
+SYSTEM_MANAGER_CONFIG = "${@bb.utils.contains('IMXBOOT_VARIANT', 'alt',       'mx95alt', \
+                            bb.utils.contains('IMXBOOT_VARIANT', 'jailhouse', 'mx95evkjailhouse', \
+                            bb.utils.contains('IMXBOOT_VARIANT', 'netc',      'mx95netc', \
+			    bb.utils.contains('IMXBOOT_VARIANT', 'sof',       'mx95evksof', \    
+                                                                              'mx95evk', d), d), d), d)}"
+
+# imx-boot (flash.bin) targets based on UBOOT_CONFIG and IMXBOOT_VARIANT
+IMXBOOT_TARGETS_SD = "${@bb.utils.contains('IMXBOOT_VARIANT', 'alt',       '${IMXBOOT_TARGETS_BASENAME}_alt', \
+		         bb.utils.contains('IMXBOOT_VARIANT', 'sof',        '${IMXBOOT_TARGETS_BASENAME}_a55', \
+                         bb.utils.contains('IMXBOOT_VARIANT', 'jailhouse', '${IMXBOOT_TARGETS_BASENAME}_jailhouse', \
+                         bb.utils.contains('IMXBOOT_VARIANT', 'netc',      '${IMXBOOT_TARGETS_BASENAME}_netc', \
+                                                                           '${IMXBOOT_TARGETS_BASENAME}_all ${IMXBOOT_TARGETS_BASENAME}_a55', d), d), d), d)} \
 "
+
+IMXBOOT_TARGETS = " \
+    ${@bb.utils.contains('UBOOT_CONFIG', 'fspi', '${IMXBOOT_TARGETS_BASENAME}_a55_flexspi', '${IMXBOOT_TARGETS_SD}', d)} \
+"
+
+IMX_BOOT_SOC_TARGET = "iMX95"
+IMX_BOOT_SEEK = "32"
+
+# We have to disable SERIAL_CONSOLE due to auto-serial-console
+SERIAL_CONSOLES = "115200;ttyLP0"
+
+IMX_DEFAULT_BSP = "nxp"
