imx95-19x19-lpddr5-evk.conf: Add dual OS08A20 with ISP and HDMI dtb [ILIE-189]
Signed-off-by: Alexi Birlinger <alexi.birlinger@nxp.com>

--- a/meta-imx-bsp/conf/machine/imx95-19x19-lpddr5-evk.conf
+++ b/meta-imx-bsp/conf/machine/imx95-19x19-lpddr5-evk.conf
@@ -20,6 +20,7 @@ KERNEL_DEVICETREE:append:use-nxp-bsp = " \
     freescale/${KERNEL_DEVICETREE_BASENAME}-cs42888.dtbo \
     freescale/${KERNEL_DEVICETREE_BASENAME}-dsi-serdes.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-dsi-serdes.dtbo \
+    freescale/${KERNEL_DEVICETREE_BASENAME}-dual-os08a20-isp-it6263-lvds0.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-inmate.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-it6263-lvds0.dtb \
     freescale/${KERNEL_DEVICETREE_BASENAME}-it6263-lvds0.dtbo \
