imx8qmmek.conf: Add imx8qm-mek-revd-sof-cs42888.dtb [YOCIMX-8475]
Signed-off-by: Valentin Jec <valentin.jec@nxp.com>

--- a/meta-imx-bsp/conf/machine/imx8qmmek.conf
+++ b/meta-imx-bsp/conf/machine/imx8qmmek.conf
@@ -17,6 +17,7 @@ KERNEL_DEVICETREE += "freescale/imx8qm-mek-revd-ca53.dtb \
                      freescale/imx8qm-mek-revd-pcie-ep.dtb \
                      freescale/imx8qm-mek-revd-root.dtb \
                      freescale/imx8qm-mek-revd-rpmsg.dtb \
+                     freescale/imx8qm-mek-revd-sof-cs42888.dtb \
                      freescale/imx8qm-mek-revd-sof-wm8962.dtb \
                      freescale/imx8qm-mek-revd-usdhc3-m2.dtb \
                      freescale/imx8qm-mek-revd-usd-wifi.dtb \
